2022-05-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	[refer]: Trivially refactor.

	* src/preproc/refer/command.cpp (input_stack::push_file):
	* src/preproc/refer/refer.cpp (do_file): Drop unnecessary
	construction of integer from integer (return type of `getc()`)
	in argument to error diagnostic functions; parallelizes with
	other diagnostic function calls.

2022-05-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/refer/command.cpp: Refactor to simplify.
	(get_location): Demote return type from `int` to `void`.  The
	function only ever returned a `1` literal.
	(input_stack::error): Update call site to stop uselessly testing
	return value of `get_location()`.

2022-05-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/doc.am (dist-info-bits, install_infodoc, dist-gnueps): Fix
	logic error.  When checking both source and build trees for
	files to copy, break after successfully copying the files, not
	after the first iteration of the loop unconditionally.  This
	caused the Info documents not to be installed from out-of-tree
	builds, and potentially would prevent them and doc/gnu.eps from
	being included in the distribution archive if for some reason
	they didn't build and that build failure were not treated as an
	error.  Problems introduced by me in commits e78bd20d54, 27
	March, and d79c3f3a4a, 11 November.

2022-05-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_APPRESDIR_OPTION): Update comments and
	human-readable output to (1) stop claiming that existing
	gxditview application defaults in the installation directory
	will be backed up; this is no longer true as of commit
	c66cb7725f, 3 April; and (2) refer to these files as
	"application defaults", not "resources".  (X11 application
	defaults are client-side and mandatory [for Xt-based programs];
	X resources are stored server-side and need not be configured to
	determine an X client's geometry and rendering.)
